# Autonomous-Agentic-Tadpole

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SYSTEM_MAP.md  audit_full_report.json  audit_full_report.md  audit_production_report.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  start_AA_tadpole.bat  start_backend.bat  start_frontend.bat  stop_AAtadpole.bat  tsconfig.app.json  tsconfig.test.json  version.json  vite.config.ts
server-rs/: .env.example  Cargo.toml  errors.txt
server-rs/migrations/: 20260304000100_initial_schema.sql  20260304000200_benchmark_logs.sql  20260305000100_continuity_scheduler.sql  20260307000100_oversight_hardened.sql  20260312000100_agent_quotas.sql  20260312000200_audit_trail.sql  20260312000300_workflows.sql  20260312000400_scheduler_workflow_link.sql  20260315000100_audit_identity_enhancement.sql  20260315000200_add_mission_degraded_column.sql  20260315000300_harden_agent_persistence.sql  20260320000100_add_missing_agent_fields.sql  20260321000100_mission_quotas.sql  20260322000100_add_category_columns.sql  20260322000200_add_mcp_tools_column.sql  20260324000100_fix_agent_provider_defaults.sql  20260324152000_add_agent_oversight_gate.sql  20260325120000_add_working_memory.sql  20260326112217_add_agent_heartbeat.sql  20260327000100_sme_connectors.sql  20260328000100_fix_connector_column.sql  20260405000100_add_agent_created_at.sql  20260405000200_add_agent_runtime_telemetry.sql  20260412000100_autonomous_governance.sql  20260413000100_overlord_policy_whitelist.sql  20260417000100_add_mission_pinning.sql  20260420000100_role_blueprints.sql  20260421000100_add_agent_versioning.sql  20260501000100_swarm_collaboration.sql  20260503000100_multiversal_session_tree.sql  20260513000100_agent_aware_permissions.sql  20260514000100_add_agent_stt_engine.sql
server-rs/scratch/: check_db.py  monitor_swarm.py  trigger_stress_test.py
server-rs/server-rs-macros/: Cargo.toml
server-rs/server-rs-macros/src/: lib.rs
server-rs/src/: bridge.rs  db.rs  db_tests.rs  env_schema.rs  error.rs  main.rs  router.rs  scratch_test.rs  secret_redactor.rs  startup.rs
server-rs/src/adapter/: discord.rs  filesystem.rs  mod.rs  tests_filesystem.rs  vault.rs
server-rs/src/agent/: anthropic.rs  audio.rs  audio_cache.rs  backlog.rs  benchmarks.rs  capability_matrix.rs  connectors.rs  constants.rs  context_manager.rs  gemini.rs  groq.rs  hooks.rs  mcp_tests.rs  memory.rs  merge.rs  mission.rs  mod.rs  null_provider.rs  openai.rs  parser.rs  persistence.rs  provider_trait.rs  rate_limiter.rs  rates.rs  reaper.rs  recipes.rs  registry.rs  sanitizer.rs  script_skills.rs  skill_manifest.rs  test_oversight.rs  test_sanitizer.rs  tests_governance.rs  tests_rate_limiter.rs  tests_skills.rs  types.rs  workflows.rs
server-rs/src/intelligence/: graph.rs  mod.rs
server-rs/src/middleware/: auth.rs  auth_rate_limit.rs  boot.rs  cors.rs  deprecation.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
server-rs/src/routes/: agent.rs  agent_tests.rs  audio.rs  auth_tests.rs  benchmarks.rs  continuity.rs  deploy.rs  docs.rs  engine_control.rs  env_schema.rs  governance.rs  health.rs  intelligence.rs  mcp.rs  mcp_test.rs  memory.rs  mod.rs  model_manager.rs  nodes.rs  oversight.rs  pagination.rs  skills.rs  sovereign_state.rs  system.rs  templates.rs  ws.rs  ws_tests.rs
server-rs/src/security/: audit.rs  metering.rs  mod.rs  monitoring.rs  permission_tests.rs  permissions.rs  scanner.rs
server-rs/src/services/: acl_service.rs  discovery.rs  mod.rs  parser.rs  privacy.rs  tests.rs
server-rs/src/state/: mod.rs
server-rs/src/system/: manifest.rs  mod.rs  profiler.rs  supervisor.rs
server-rs/src/telemetry/: aggregator.rs  bridge.rs  bridge_tests.rs  mod.rs  pulse.rs  pulse_tests.rs  pulse_types.rs  telemetry_layer_tests.rs
server-rs/src/types/: mod.rs  rag_scoring.rs  schemas.ts
server-rs/src/utils/: data_weighting.rs  graph.rs  (+6 more)
(+697 files in other folders)
