[package]
name = "server-rs"
version = "1.1.57"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Web Framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs", "compression-full", "timeout"] }
tower = { version = "0.5.3", features = ["util", "make"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0.18"

# Environment Variables
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
tracing-opentelemetry = "0.32.1"
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }

# HTTP Client (for Gemini API)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Process / System
rand = "0.10.1"
chacha20 = "0.10.0"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
dashmap = "6.0"
parking_lot = "0.12"
sysinfo = "0.38.4"
# Database Persistence
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "json", "migrate", "derive", "macros" ] }
cron = "0.16.0"
once_cell = "1.21.3"
regex = "1.10"
async-trait = "0.1"
tiktoken-rs = "0.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
unicode-normalization = "0.1"
base64 = "0.22"
lru = "0.18.0"
backoff = { version = "0.4", features = ["tokio"] }
tokio-tungstenite = "0.29.0"
subtle = "2.6"
moka = { version = "0.12", features = ["future"] }


# Hydra-RS: Code Intelligence Dependencies
tree-sitter = { version = "0.26.8", default-features = false }
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23"
ignore = "0.4"
streaming-iterator = "0.1"
md5 = "0.7"
walkdir = "2.5"
# Vector Database (Optional for Legacy CPUs)
lancedb = { version = "0.27.2", optional = true }
arrow-schema = { version = "58.1.0", optional = true }
arrow-array = { version = "58.1.0", optional = true }

# Neural Audio (Optional for Legacy CPUs)
ort = { version = "2.0.0-rc.9", optional = true }
hound = { version = "3.5", optional = true }
ndarray = { version = "0.15", optional = true }
whisper-rs = { version = "0.16.0", optional = true }
mdns-sd = "0.19.0"
local-ip-address = "0.6.11"
serde_yaml = "0.9.34"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0"
petgraph = "0.8.3"
fs-err = "3.3.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
server-rs-macros = { path = "./server-rs-macros" }
rmp-serde = "1.3.1"
specta-typescript = "0.0.8"
specta = { version = "2.0.0-rc.21", features = ["derive", "chrono", "serde", "export", "serde_json"] }
urlencoding = "2.1.3"

[features]
# default = ["vector-memory", "neural-audio"]
# OPTION B: Disabled both 'vector-memory' and 'neural-audio' by default to resolve 'protoc' and 'libclang' 
# dependency issues on local Windows and for resource optimization.
default = []
vector-memory = ["dep:lancedb", "dep:arrow-schema", "dep:arrow-array"]
neural-audio = ["dep:ort", "dep:hound", "dep:ndarray", "dep:whisper-rs"]

[profile.release]
opt-level = 3 # Maximize execution performance
lto = "fat"    # Full Link Time Optimization for maximum stripping
codegen-units = 1 # Better optimizations
panic = 'abort' # Smaller error handling
strip = true    # Remove all symbols

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.8.2", features = ["async_tokio"] }
